docs: fix `Tanstack` ✖︎ with `TanStack` ✔︎

--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -17,7 +17,7 @@ npm install -D openapi-typescript
 ## Requirements
 
 OpenAPI Qraft is compatible with React v18+ and works with ReactDOM and React Native.
-Browser support is the sa as requirements as [Tanstack Query](https://tanstack.com/query/latest/docs/framework/react/installation#requirements):
+Browser support is the sa as requirements as [TanStack Query](https://tanstack.com/query/latest/docs/framework/react/installation#requirements):
 
 ```text
 Chrome >= 91
@@ -30,7 +30,7 @@ Opera >= 77
 
 :::info Peer Dependency
 
-If you are not already using **Tanstack Query v5**, you need to
+If you are not already using **TanStack Query v5**, you need to
 [install](https://tanstack.com/query/latest/docs/framework/react/installation) it as well:
 
 ```bash npm2yarn
