--- a/website/docs/hooks/useIsFetching.mdx
+++ b/website/docs/hooks/useIsFetching.mdx
@@ -22,7 +22,7 @@ const queriesAmount = qraft.<service>.<operation>.useIsFetching(
    - **Optional**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
      to be used, strictly-typed ✨
    - `filters.parameters: Record<'path' | 'query' | 'header', Record<string, any>>` will be used for filtering queries by parameters
-   - `filters.queryKey: QueryKey` will be used for filtering queries by instead of parameters
+   - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
      - `filters.queryKey` and `filters.parameters` are mutually exclusive
    - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
 2. `queryClient?: QueryClient`
