docs: fix heading level

--- a/website/docs/query-client/getInfiniteQueryKey.mdx
+++ b/website/docs/query-client/getInfiniteQueryKey.mdx
@@ -16,7 +16,7 @@ const queryKey = qraft.<service>.<operation>.getInfiniteQueryKey({
 });
 ```
 
-## Example
+### Example
 
 ```tsx
 const queryKey = qraft.files.getFiles.getInfiniteQueryKey({
