--- a/website/docs/query-client/getQueryData.mdx
+++ b/website/docs/query-client/getQueryData.mdx
@@ -20,7 +20,7 @@ const data = qraft.<service>.<operation>.getQueryData(
 ## Arguments
 
 1. `parameters: Record<'path' | 'query' | 'header', Record<string, any>> | QueryKey`
-   - **Required** parameters to retrieve the data from the cache.
+   - **Required** parameters to retrieve the data from the _Query Cache_.
    - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
      which is also strictly-typed ✨
 2. `queryClient: QueryClient`
