docs: improve tabs labels

--- a/website/docs/query-client/cancelQueries.mdx
+++ b/website/docs/query-client/cancelQueries.mdx
@@ -13,7 +13,7 @@ and [_Query Cancellation 🌴_](https://tanstack.com/query/latest/docs/framework
 guide for more information.
 
 <Tabs>
-  <TabItem value="with-filters-no-options" label={<span style={{verticalAlign: "middle"}}><code>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
+  <TabItem value="with-filters-no-options" label={<span style={{verticalAlign: "middle"}}>With <code>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
     Cancels queries for the specified endpoint using the provided filters.
 
     ```ts
@@ -41,7 +41,7 @@ guide for more information.
          - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
            result will be used as a fallback
   </TabItem>
-  <TabItem value="with-filter-and-options" label={<span style={{verticalAlign: "middle"}}><code>filters</code>, <code>options</code></span>}>
+  <TabItem value="with-filter-and-options" label={<span style={{verticalAlign: "middle"}}>With <code>filters</code>, <code>options</code></span>}>
     Cancels queries for the specified endpoint using the provided filters with the specified options.
 
     ```ts
@@ -73,7 +73,7 @@ guide for more information.
          - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
            result will be used as a fallback
   </TabItem>
-  <TabItem value="witout-filters" label={<span style={{verticalAlign: "middle"}}><code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
+  <TabItem value="witout-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
     Cancels _all_ queries for the specified endpoint.
 
     ```ts
