--- a/website/docs/hooks/useQueries.mdx
+++ b/website/docs/hooks/useQueries.mdx
@@ -22,7 +22,7 @@ const queries = qraft.<service>.<operation>.useQueries(
 ### Arguments
 
 1. `{ queries, combine }`
-   - **Required**, represents the options for the queries
+   - **Required**, represents the options for queries
    - `queries: QueryOptions[]`
      - **Required** queries to be executed
      - `queries.<number>.parameters: Record<'path' | 'query' | 'header', Record<string, any>>` will be used for the request
