--- a/website/docs/query-client/cancelQueries.mdx
+++ b/website/docs/query-client/cancelQueries.mdx
@@ -130,7 +130,7 @@ guide for more information.
 
     ```ts
     /**
-     * Will cancel the queries matching the specified endpoint:
+     * Will cancel queries matching the specified endpoint:
      * ###
      * GET /entities/3e3e-3e3e-3e3e
      * x-monite-version: 2023-09-01
@@ -151,7 +151,7 @@ guide for more information.
 
     ```ts
     /**
-     * Will cancel the queries matching the specified endpoint and predicate:
+     * Will cancel queries matching the specified endpoint and predicate:
      * ###
      * GET /entities/3e3e-3e3e-3e3e
      * x-monite-version: 2023-09-01
@@ -178,7 +178,7 @@ guide for more information.
 
     ```ts
     /**
-     * Will cancel the queries matching the specified endpoint:
+     * Will cancel queries matching the specified endpoint:
      * ###
      * GET /entities/3e3e-3e3e-3e3e
      * x-monite-version: 2023-09-01
