docs: add "Supported TanStack Query Features" section to the overview

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -158,3 +158,45 @@ hooks with strictly-typed parameters.
     ```
   </TabItem>
 </Tabs>
+
+## Supported TanStack Query Features
+
+### Hooks
+
+- [x] [`useQuery(...)`](/hooks/useQuery.mdx)
+- [x] [`useMutation(...)`](/hooks/useMutation.mdx)
+- [x] [`useInfiniteQuery(...)`](/hooks/useInfiniteQuery.mdx)
+- [x] [`useQueries(...)`](/hooks/useQueries.mdx)
+- [x] [`useSuspenseQuery(...)`](/hooks/useSuspenseQuery.mdx)
+- [x] [`useSuspenseInfiniteQuery(...)`](/hooks/useSuspenseInfiniteQuery.mdx)
+- [x] [`useSuspenseQueries(...)`](/hooks/useSuspenseQueries.mdx)
+- [x] [`useIsFetching(...)`](/hooks/useIsFetching.mdx)
+- [x] [`useMutationState(...)`](/hooks/useMutationState.mdx)
+- [ ] `useIsMutating(...)` 🔜
+
+### `QueryClient` methods
+
+- [x] [`fetchQuery(...)`](/query-client/fetchQuery.mdx)
+- [x] [`fetchInfiniteQuery(...)`](/query-client/fetchInfiniteQuery.mdx)
+- [x] [`prefetchQuery(...)`](/query-client/prefetchQuery.mdx)
+- [x] [`prefetchInfiniteQuery(...)`](/query-client/prefetchInfiniteQuery.mdx)
+- [x] [`getQueryData(...)`](/query-client/getQueryData.mdx)
+- [ ] `getQueriesData(...)` 🔜
+- [x] [`setQueryData(...)`](/query-client/setQueryData.mdx)
+- [ ] `getQueryState(...)` 🔜
+- [ ] `setQueriesData(...)` 🔜
+- [x] [`invalidateQueries(...)`](/query-client/invalidateQueries.mdx)
+- [x] [`refetchQueries(...)`](/query-client/refetchQueries.mdx)
+- [x] [`cancelQueries(...)`](/query-client/cancelQueries.mdx)
+- [ ] `removeQueries(...)` 🔜
+- [x] [`resetQueries(...)`](/query-client/resetQueries.mdx)
+- [x] [`isFetching(...)`](/query-client/isFetching.mdx)
+- [ ] `isMutating(...)` 🔜
+
+### Qraft Utility Functions
+
+- [x] [`getQueryKey(...)`](/query-client/getQueryKey.mdx)
+- [x] [`setInfiniteQueryData(...)`](/query-client/setInfiniteQueryData.mdx)
+- [x] [`getInfiniteQueryKey(...)`](/query-client/getInfiniteQueryKey.mdx)
+- [x] [`getInfiniteQueryData(...)`](/query-client/getInfiniteQueryData.mdx)
+- [x] `getMutationKey(...)`
