--- a/website/docs/query-client/setQueryData.mdx
+++ b/website/docs/query-client/setQueryData.mdx
@@ -22,7 +22,7 @@ See the TanStack [_queryClient.setQueryData 🌴_](https://tanstack.com/query/la
 
     ## Arguments
 
-    1. `parameters: Record<'path' | 'query' | 'header', Record<string, any>> | QueryKey`
+    1. `parameters: { path, query, header } | QueryKey`
          - **Required** parameters to set the data in the _Query Cache_.
          - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
            which is also strictly-typed ✨
@@ -43,7 +43,7 @@ See the TanStack [_queryClient.setQueryData 🌴_](https://tanstack.com/query/la
 
     ## Arguments
 
-    1. `parameters: Record<'path' | 'query' | 'header', Record<string, any>> | QueryKey`
+    1. `parameters: { path, query, header } | QueryKey`
          - **Required** parameters to set the data in the _Query Cache_.
          - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
            which is also strictly-typed ✨
