--- a/website/docs/hooks/useMutationState.mdx
+++ b/website/docs/hooks/useMutationState.mdx
@@ -25,7 +25,7 @@ const mutations = qraft.<service>.<operation>.useMutationState(
      - `filters?: UseMutationStateFiltersByParameters | UseMutationStateFiltersByMutationKey`
        - **Optional**, represents the [_Mutation Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#mutation-filters)
          to be used, strictly-typed ✨
-       - `filters.parameters: Record<'path' | 'query' | 'header', Record<string, any>>` will be used for filtering mutations by parameters
+       - `filters.parameters: { path, query, header }` will be used for filtering mutations by parameters
        - `filters.mutationKey: MutationKey` will be used for filtering mutations by _MutationKey_ instead of parameters
          - `filters.mutationKey` and `filters.parameters` are mutually exclusive
      - `filters.predicate?: (query: Mutation) => boolean` will be used for filtering mutations by custom predicate
