--- a/website/docs/hooks/useQuery.mdx
+++ b/website/docs/hooks/useQuery.mdx
@@ -24,7 +24,7 @@ const query = qraft.<service>.<operation>.useQuery(
 
 ### Arguments
 
-1. `parameters: Record<'path' | 'query' | 'header', Record<string, any>> | QueryKey | {}`
+1. `parameters: { path, query, header } | QueryKey | {}`
    - **Required**, OpenAPI request parameters for the query, strictly-typed ✨
    - `parameters` will be used to generate the `QueryKey`
    - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
