--- a/website/docs/query-client/invalidateQueries.mdx
+++ b/website/docs/query-client/invalidateQueries.mdx
@@ -27,7 +27,7 @@ guide for more information.
     1. `filters: QueryFiltersByParameters | QueryFiltersByQueryKey`
        - **Required**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
          to be used, strictly-typed ✨
-       - `filters.parameters: Record<'path' | 'query' | 'header', Record<string, any>>` will be used for filtering queries by parameters
+       - `filters.parameters: { path, query, header }` will be used for filtering queries by parameters
        - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
          - `filters.queryKey` and `filters.parameters` are mutually exclusive
        - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
