docs: update `useQueries` and `useSuspenseQueries` documentation

--- a/website/docs/hooks/useQueries.mdx
+++ b/website/docs/hooks/useQueries.mdx
@@ -18,7 +18,7 @@ const queries = qraft.<service>.<operation>.useQueries(
 ### Arguments
 
 1. `options: UseQueriesOptions`
-   - **Required**, represents the options for queries
+   - **Required**, represents the options for queries, see [_useQueries(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueries) documentation
    - `options.queries: QueryOptions[]`
      - **Required** array of _Queries_ to be executed
      - `parameters: { path, query, header }` will be used for the request
