--- a/website/docs/hooks/useQuery.mdx
+++ b/website/docs/hooks/useQuery.mdx
@@ -22,6 +22,10 @@ const query = qraft.<service>.<operation>.useQuery(
 )
 ```
 
+### Returns
+
+`UseQueryResult` object, see the TanStack [_UseQueryResult 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQuery#:~:text=will%20be%20used.-,Returns,-status%3A%20String)
+
 ### Arguments
 
 1. `parameters: { path, query, header } | QueryKey | {}`
