docs: update `overview`

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -199,4 +199,4 @@ hooks with strictly-typed parameters.
 - [x] [`setInfiniteQueryData(...)`](/query-client/setInfiniteQueryData.mdx)
 - [x] [`getInfiniteQueryKey(...)`](/query-client/getInfiniteQueryKey.mdx)
 - [x] [`getInfiniteQueryData(...)`](/query-client/getInfiniteQueryData.mdx)
-- [x] `getMutationKey(...)`
+- [x] [`getMutationKey(...)`](/query-client/getMutationKey.mdx)
