--- a/website/docs/hooks/useQuery.mdx
+++ b/website/docs/hooks/useQuery.mdx
@@ -58,7 +58,7 @@ const query = qraft.<service>.<operation>.useQuery(
 
     function ApprovalPolicyName() {
       /**
-       * `<service>.<operation>.useQuery(...)` will execute the request:
+       * `<service>.<operation>.useQuery(...)` initiates the request to retrieve data:
        * ###
        * GET /approval_policies/321?items_order=asc&items_order=desc
        * x-monite-version: 1.0.0
@@ -98,7 +98,7 @@ const query = qraft.<service>.<operation>.useQuery(
 
     function ApprovalPolicyName() {
       /**
-       * `<service>.<operation>.useQuery(...)` will execute the request:
+       * `<service>.<operation>.useQuery(...)` initiates the request to retrieve data:
        * ###
        * GET /approval_policies/123?items_order=asc&items_order=desc
        * x-monite-version: 2.0.0
