--- a/website/docs/hooks/useSuspenseQueries.mdx
+++ b/website/docs/hooks/useSuspenseQueries.mdx
@@ -51,7 +51,7 @@ const qraft = createAPIClient();
 
 function Entities() {
   /**
-   * Will execute the request two queries:
+   * Initiates two GET requests for entity details:
    * ###
    * GET /entities/3e3e-3e3e-3e3e
    * x-monite-version: 2023-09-01
