--- a/website/docs/hooks/useSuspenseQuery.mdx
+++ b/website/docs/hooks/useSuspenseQuery.mdx
@@ -54,7 +54,8 @@ const qraft = createAPIClient();
 
 function ApprovalPolicyName() {
   /**
-   * `<service>.<operation>.useSuspenseQuery(...)` will execute the request:
+   * `<service>.<operation>.useSuspenseQuery(...)` initiates
+   * the request for data retrieval:
    * ###
    * GET /approval_policies/321?items_order=asc&items_order=desc
    * x-monite-version: 1.0.0
