--- a/website/docs/hooks/useMutation.mdx
+++ b/website/docs/hooks/useMutation.mdx
@@ -44,7 +44,7 @@ const query = qraft.<service>.<operation>.useMutation(
 ### Returns
 - `mutation: MutationResult`
   - **Object** from the [_useMutation(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useMutation) Hook
-  - `mutation.mutate(parameters | {parameters, body})` will execute the request
+  - `mutation.mutate(parameters | {parameters, body})` initiates the request
   - `mutation.variables` will contain the `parameters` and `body` of the request,
     after calling `mutation.mutate(...)`.
 
@@ -79,7 +79,7 @@ const query = qraft.<service>.<operation>.useMutation(
             event.preventDefault();
             const formData = new FormData(event.currentTarget);
             /**
-             * `mutation.mutate(...)` will execute the request`:
+             * `mutation.mutate(...)` triggers the submission of a request:
              * ###
              * POST /entities/3e3e-3e3e-3e3e/documents
              * x-monite-version: 2023-09-01
@@ -119,7 +119,7 @@ const query = qraft.<service>.<operation>.useMutation(
             event.preventDefault();
             const formData = new FormData(event.currentTarget);
             /**
-             * `mutation.mutate(...)` will execute the request`:
+             * `mutation.mutate(...)` triggers the submission of a request:
              * ###
              * POST /entities/3e3e-3e3e-3e3e/documents
              * x-monite-version: 2023-09-01
