docs: update `refetchQueries` documentation

--- a/website/docs/query-client/refetchQueries.mdx
+++ b/website/docs/query-client/refetchQueries.mdx
@@ -5,7 +5,9 @@ sidebar_label: refetchQueries 📝
 
 # refetchQueries(...)
 
-See the [_queryClient.refetchQueries(...) 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientrefetchqueries) documentation.
+The function is used to refetch a list of queries by their keys.
+The API is the same as [_fetchQueries(...)_](fetchQueries.mdx) Hook.
+See also the TanStack [_queryClient.refetchQueries(...) 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientrefetchqueries) documentation.
 
 :::info
 Documentation is actively being updated 🚧
