docs: update `resetQueries` documentation

--- a/website/docs/query-client/resetQueries.mdx
+++ b/website/docs/query-client/resetQueries.mdx
@@ -1,11 +1,12 @@
 ---
-id: resetQueries
-sidebar_label: resetQueries 📝
+sidebar_label: resetQueries
 ---
 
 # resetQueries(...)
 
-See the [_queryClient.resetQueries(...) 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientresetqueries) documentation.
+The function is used to refetch a list of queries by their keys.
+The API is the same as [_cancelQueries(...)_](cancelQueries.mdx) Hook.
+See also the TanStack [_queryClient.resetQueries(...) 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientresetqueries) documentation.
 
 :::info
 Documentation is actively being updated 🚧
