docs(client-react): update `setInfiniteQueryData(...)` documentation

--- a/website/docs/query-client/setInfiniteQueryData.mdx
+++ b/website/docs/query-client/setInfiniteQueryData.mdx
@@ -1,6 +1,5 @@
 ---
-id: setInfiniteQueryData
-sidebar_label: setInfiniteQueryData 📝
+sidebar_label: setInfiniteQueryData
 ---
 
 # setInfiniteQueryData(...)
