docs(client-react): add `removeQueries(...)` documentation

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -188,7 +188,7 @@ hooks with strictly-typed parameters.
 - [x] [`invalidateQueries(...)`](/query-client/invalidateQueries.mdx)
 - [x] [`refetchQueries(...)`](/query-client/refetchQueries.mdx)
 - [x] [`cancelQueries(...)`](/query-client/cancelQueries.mdx)
-- [ ] `removeQueries(...)` 🔜
+- [x] [`removeQueries(...)`](/query-client/removeQueries.mdx)
 - [x] [`resetQueries(...)`](/query-client/resetQueries.mdx)
 - [x] [`isFetching(...)`](/query-client/isFetching.mdx)
 - [ ] `isMutating(...)` 🔜
