--- a/website/docs/query-client/refetchQueries.mdx
+++ b/website/docs/query-client/refetchQueries.mdx
@@ -70,7 +70,7 @@ See also the TanStack [_queryClient.refetchQueries(...) 🌴_](https://tanstack.
          - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
            result will be used as a fallback
   </TabItem>
-  <TabItem value="witout-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
+  <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
     Refetches _all_ queries for the specified endpoint.
 
     ```ts
