--- a/website/docs/query-client/cancelQueries.mdx
+++ b/website/docs/query-client/cancelQueries.mdx
@@ -73,7 +73,7 @@ guide for more information.
          - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
            result will be used as a fallback
   </TabItem>
-  <TabItem value="witout-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
+  <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>No <code style={{textDecoration: "line-through"}}>filters</code>, <code style={{textDecoration: "line-through"}}>options</code></span>}>
     Cancels _all_ queries for the specified endpoint.
 
     ```ts
