--- a/website/docs/query-client/isFetching.mdx
+++ b/website/docs/query-client/isFetching.mdx
@@ -40,7 +40,7 @@ guide for more information.
          - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
            result will be used as a fallback
   </TabItem>
-  <TabItem value="witout-filters" label={<span style={{verticalAlign: "middle"}}>Without <code>filters</code></span>}>
+  <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>Without <code>filters</code></span>}>
     Check _all_ queries for the specified endpoint.
 
     ```ts
