docs: add `useIsMutating(...)` documentation

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -172,7 +172,7 @@ hooks with strictly-typed parameters.
 - [x] [`useSuspenseQueries(...)`](/hooks/useSuspenseQueries.mdx)
 - [x] [`useIsFetching(...)`](/hooks/useIsFetching.mdx)
 - [x] [`useMutationState(...)`](/hooks/useMutationState.mdx)
-- [ ] `useIsMutating(...)` 🔜
+- [x] [`useIsMutating(...)`](/hooks/useIsMutating.mdx)
 
 ### `QueryClient` methods
 
