docs: add `isMutating(...)` documentation

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -191,7 +191,7 @@ hooks with strictly-typed parameters.
 - [x] [`removeQueries(...)`](/query-client/removeQueries.mdx)
 - [x] [`resetQueries(...)`](/query-client/resetQueries.mdx)
 - [x] [`isFetching(...)`](/query-client/isFetching.mdx)
-- [ ] `isMutating(...)` 🔜
+- [x] [`isMutating(...)`](/query-client/isMutating.mdx)
 
 ### Qraft Utility Functions
 
