docs: update `quick-start` documentation

--- a/website/docs/getting-started/quick-start.mdx
+++ b/website/docs/getting-started/quick-start.mdx
@@ -9,6 +9,7 @@ import TabItem from '@theme/TabItem';
 
 To get started with OpenAPI Qraft, you first need to generate types from your OpenAPI Document,
 and also generate services that will use these types to interact with your API.
+Assumed that you already [installed](installation.mdx) Qraft packages.
 
 ### 1. **Generate Types**
 
