--- a/website/docs/query-client/fetchInfiniteQuery.mdx
+++ b/website/docs/query-client/fetchInfiniteQuery.mdx
@@ -45,7 +45,7 @@ const result = qraft.<service>.<operation>.fetchInfiniteQuery(
 
 ### Returns
 
-`Promise<InifniteData<T>>` - A promise of the paginated data and page parameters
+`Promise<InfiniteData<T>>` - A promise of the paginated data and page parameters
 
 ### Example
 
