--- a/website/docs/hooks/useSuspenseQuery.mdx
+++ b/website/docs/hooks/useSuspenseQuery.mdx
@@ -42,7 +42,7 @@ const result = qraft.<service>.<operation>.useSuspenseQuery(
 
 ### Returns
 
-`TData` - the reesult from the query
+`TData` - the result from the query
 
 ### Example
 
