docs(client-react): add setQueriesData documentation

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -184,7 +184,7 @@ hooks with strictly-typed parameters.
 - [ ] `getQueriesData(...)` 🔜
 - [x] [`setQueryData(...)`](/query-client/setQueryData.mdx)
 - [ ] `getQueryState(...)` 🔜
-- [ ] `setQueriesData(...)` 🔜
+- [x] [`setQueriesData(...)`](/query-client/setQueriesData.mdx)
 - [x] [`invalidateQueries(...)`](/query-client/invalidateQueries.mdx)
 - [x] [`refetchQueries(...)`](/query-client/refetchQueries.mdx)
 - [x] [`cancelQueries(...)`](/query-client/cancelQueries.mdx)
