--- a/website/docs/hooks/useIsFetching.mdx
+++ b/website/docs/hooks/useIsFetching.mdx
@@ -22,6 +22,7 @@ const queriesNumber = qraft.<service>.<operation>.useIsFetching(
    - **Optional**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
      to be used. If not provided, _all_ normal and _Infinite_ queries will be used to filter.
    - `filters.parameters: { path, query, header }` will be used for filtering queries by parameters
+   - `filters.infinite: boolean` will be used to filter infinite or normal queries
    - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
      - `filters.queryKey` and `filters.parameters` are mutually exclusive
    - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
