--- a/website/docs/query-client/invalidateQueries.mdx
+++ b/website/docs/query-client/invalidateQueries.mdx
@@ -28,6 +28,7 @@ guide for more information.
        - **Required**, represents the [_Query Filters 🌴_](https://tanstack.com/query/latest/docs/framework/react/guides/filters#query-filters)
          to be used, strictly-typed ✨
        - `filters.parameters: { path, query, header }` will be used for filtering queries by parameters
+       - `filters.infinite: boolean` will be used to filter infinite or normal queries
        - `filters.queryKey: QueryKey` will be used for filtering queries by _QueryKey_ instead of parameters
          - `filters.queryKey` and `filters.parameters` are mutually exclusive
        - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
